# Kotoha

./: .gitignore  README.md  main.py  pagination.py  pyproject.toml  requirements.txt  server.py  shika.py  unused_memo.txt
.github/workflows/: flake8.yml  main.yml
cogs/: akane-ai.py  akane-talks.py  delete.py  fun.py  guild.py  jppost.py  money.py  nijigen.py  scratch.py  settings.py  shikanoko.py  system.py  useful.py  user.py  web.py  youtube.py
data/: commands.json  shikanoko.json
data/prompts/: akane.txt  anagosan.txt  aoi.txt  jinrou.txt  quiz.txt  zundamon.txt
modules/: pagination.py
tools/: reset_guild_commands.py  server.py
