[tool.poetry]
name = "kotoha"
version = "1.0.0"
description = ""
authors = ["Hiroshi Deco <decodeco.7000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"
google = "^3.0.0"
traceback2 = "^1.4.0"
DateTime = "^4.3"
requests = "^2.25.1"
PyNaCl = "^1.4.0"
gTTS = "^2.2.2"
youtube_dl = "^2021.6.6"
discord-together = "^1.1.1"
Pillow = "^8.3.2"
googletrans = "^3.0.0"
discord = "^1.7.3"
discord-py-slash-command = "^3.0.3"
"discord.py" = "2.2.3"
google-search = "1.1.1"
yt-dlp = "2023.7.6"

[tool.poetry.dev-dependencies]
urllib3 = "1.26.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
